<resources>
    <string name="app_name">DrunkGames</string>

    <!-- MainActivity ActionBar items -->
    <string name="favorites">Favoritos</string>
    <string name="search">Buscar</string>
    <string name="addGame">Agregar juego</string>
    <string name="credits">Créditos</string>

    <!-- GameActivity values -->
    <string name="instructions">CÓMO JUGAR:</string>
    <string name="addons">Add-Ons:</string>
    <string name="share">Compartir</string>
    <string name="fav">Fav</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>

    <!-- AddGameActivity values -->
    <string name="newGame">Juego nuevo</string>
    <string name="shortDescription">Descripción rápida:</string>
    <string name="instructionTitle">Cómo jugar:</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="nameTitle">Nombre:</string>
    <string name="cannotSave">No se puede guardar</string>
    <string name="cannotSaveWarning">El juego debe tener título e instrucciones</string>

    <!-- Colors: -->
    <color name="white">#FFFFFF</color>
    <color name="silver">#C0C0C0</color>
    <color name="grey42">#424242</color>
    <color name="grey30">#303030</color>
    <color name="grey21">#212121</color>
    <color name="black">#000000</color>
    <color name="red">#FF0000</color>
    <color name="darkRed">#D00000</color>

    <!-- For dialogs: -->
    <string name="delete_warning">Eliminar juego</string>
    <string name="delete_confirmation">¿Seguro que deseas eliminar este juego?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

</resources>
