<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/favorites"
        android:title="@string/favorites"
        android:orderInCategory="100"
        android:icon="@drawable/star_on"
        app:showAsAction="never|withText" />

    <item android:id="@+id/addGame"
        android:title="@string/addGame"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="never|withText"/>

    <item android:id="@+id/mandarJuegos"
        android:title="Mandar Juegos"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
